[gd_scene load_steps=6 format=3 uid="uid://cv85um35dllay"]

[ext_resource type="Script" path="res://UI/status_display.gd" id="1_j4on0"]
[ext_resource type="Texture2D" uid="uid://cameo864ts3ly" path="res://assets/ui/tinyRPG_manaSoulGUI_v_1_0/20250421barA-Sheet.png" id="2_5uyce"]
[ext_resource type="Texture2D" uid="uid://caop0lbksckxg" path="res://assets/ui/tinyRPG_manaSoulGUI_v_1_0/20250421barB-Sheet.png" id="2_tybqv"]
[ext_resource type="Texture2D" uid="uid://cqbulxjcpitd6" path="res://assets/ui/20250421barB-progress-Sheet-sheet.png" id="3_84am8"]
[ext_resource type="Texture2D" uid="uid://bk2jupkb57jny" path="res://assets/ui/20250421barA-progress-Sheet-sheet.png" id="5_4624b"]

[node name="StatusDisplay" type="Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_right = 203.0
offset_bottom = 100.0
script = ExtResource("1_j4on0")
current_health = 50.0
current_hunger = 50.0

[node name="HungerBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 97.0
offset_right = 97.0
offset_bottom = 114.0
scale = Vector2(2.5, 2.5)
texture_under = ExtResource("2_tybqv")
texture_progress = ExtResource("3_84am8")

[node name="HungerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 71.0
offset_right = 69.0
offset_bottom = 94.0
text = "Hunger"

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 38.0
offset_right = 97.0
offset_bottom = 55.0
scale = Vector2(2.5, 2)
texture_under = ExtResource("2_5uyce")
texture_progress = ExtResource("5_4624b")

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 61.0
offset_bottom = 30.0
text = "Health
"
